Add more logging

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR, stdout, stderr
+log4j.rootLogger=INFO, stdout, stderr
 
 # configure stdout
 # set the conversion pattern of stdout
