--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
 
   <repositories>
     <repository>
+      <id>local-maven-repo</id>
+      <url>file:///${project.basedir}/deps</url>
+    </repository>
+    <repository>
       <id>nukkitx-repo</id>
       <url>https://repo.nukkitx.com/snapshot/</url>
     </repository>
@@ -40,6 +44,12 @@
     <dependency>
       <groupId>com.nukkitx.protocol</groupId>
       <artifactId>bedrock-v354</artifactId>
+      <version>2.0.4</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.nukkitx.protocol</groupId>
+      <artifactId>bedrock-common</artifactId>
       <version>2.0.3</version>
       <scope>compile</scope>
     </dependency>
